Agregado el contenido adicional del blog

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -12,6 +12,7 @@
 
             <h1>Blogpost Titulo</h1>
             <p>Parrafo de inicio con ramas donde vamos a explicar y hablar de cosas</p>
+            <p>Este es el segundo parrafo de prueba </p>
         </div>
     </div>
 </body>
